// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`zoom lifecycle 1`] = `
{
  "SVGHeight": 200,
  "SVGMinX": 0,
  "SVGMinY": 0,
  "SVGWidth": 200,
  "a": 2,
  "b": 0,
  "c": 0,
  "d": 2,
  "e": 0,
  "endX": null,
  "endY": null,
  "f": 0,
  "focus": false,
  "lastAction": "zoom",
  "miniatureOpen": true,
  "mode": "idle",
  "pinchPointDistance": null,
  "prePinchMode": null,
  "scaleFactorMax": null,
  "scaleFactorMin": null,
  "startX": null,
  "startY": null,
  "version": 3,
  "viewerHeight": 200,
  "viewerWidth": 200,
}
`;

exports[`zoom lifecycle 2`] = `
{
  "SVGHeight": 200,
  "SVGMinX": 0,
  "SVGMinY": 0,
  "SVGWidth": 200,
  "a": 4,
  "b": 0,
  "c": 0,
  "d": 4,
  "e": 0,
  "endX": null,
  "endY": null,
  "f": 0,
  "focus": false,
  "lastAction": "zoom",
  "miniatureOpen": true,
  "mode": "idle",
  "pinchPointDistance": null,
  "prePinchMode": null,
  "scaleFactorMax": null,
  "scaleFactorMin": null,
  "startX": null,
  "startY": null,
  "version": 3,
  "viewerHeight": 200,
  "viewerWidth": 200,
}
`;

exports[`zoom test zoom in 1`] = `
{
  "SVGHeight": 400,
  "SVGMinX": 0,
  "SVGMinY": 0,
  "SVGWidth": 400,
  "a": 2,
  "b": 0,
  "c": 0,
  "d": 2,
  "e": 0,
  "endX": null,
  "endY": null,
  "f": 0,
  "focus": false,
  "lastAction": "zoom",
  "miniatureOpen": true,
  "mode": "idle",
  "pinchPointDistance": null,
  "prePinchMode": null,
  "scaleFactorMax": null,
  "scaleFactorMin": null,
  "startX": null,
  "startY": null,
  "version": 3,
  "viewerHeight": 200,
  "viewerWidth": 200,
}
`;

exports[`zoom test zoom in 2`] = `
{
  "SVGHeight": 400,
  "SVGMinX": 0,
  "SVGMinY": 0,
  "SVGWidth": 400,
  "a": 4,
  "b": 0,
  "c": 0,
  "d": 4,
  "e": 0,
  "endX": null,
  "endY": null,
  "f": 0,
  "focus": false,
  "lastAction": "zoom",
  "miniatureOpen": true,
  "mode": "idle",
  "pinchPointDistance": null,
  "prePinchMode": null,
  "scaleFactorMax": null,
  "scaleFactorMin": null,
  "startX": null,
  "startY": null,
  "version": 3,
  "viewerHeight": 200,
  "viewerWidth": 200,
}
`;

exports[`zoom test zoom out 1`] = `
{
  "SVGHeight": 400,
  "SVGMinX": 0,
  "SVGMinY": 0,
  "SVGWidth": 400,
  "a": 0.5,
  "b": 0,
  "c": 0,
  "d": 0.5,
  "e": 0,
  "endX": null,
  "endY": null,
  "f": 0,
  "focus": false,
  "lastAction": "zoom",
  "miniatureOpen": true,
  "mode": "idle",
  "pinchPointDistance": null,
  "prePinchMode": null,
  "scaleFactorMax": null,
  "scaleFactorMin": null,
  "startX": null,
  "startY": null,
  "version": 3,
  "viewerHeight": 200,
  "viewerWidth": 200,
}
`;

exports[`zoom test zoom out 2`] = `
{
  "SVGHeight": 400,
  "SVGMinX": 0,
  "SVGMinY": 0,
  "SVGWidth": 400,
  "a": 0.25,
  "b": 0,
  "c": 0,
  "d": 0.25,
  "e": 0,
  "endX": null,
  "endY": null,
  "f": 0,
  "focus": false,
  "lastAction": "zoom",
  "miniatureOpen": true,
  "mode": "idle",
  "pinchPointDistance": null,
  "prePinchMode": null,
  "scaleFactorMax": null,
  "scaleFactorMin": null,
  "startX": null,
  "startY": null,
  "version": 3,
  "viewerHeight": 200,
  "viewerWidth": 200,
}
`;
